# JT_Zero_Core_Claude

./: .gitignore  CLAUDE.md  FAILSAFE.md  README.md  Worklog.md  backend_test.py  blast_radius.py  commands_reminder.md  design_guidelines.json  setup.sh  update.sh
.emergent/: emergent.yml
.github/workflows/: build-frontend.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/phase-01-thread-safety/: PLAN.md  RESEARCH.md
backend/: .env  flight_log.py  native_bridge.py  requirements.txt  server.py  simulator.py
backend/static/: asset-manifest.json  index.html
backend/static/static/css/: main.0c5a7353.css  main.0c5a7353.css.map  main.5fdfd262.css  main.5fdfd262.css.map
backend/static/static/js/: main.555021ea.js  main.555021ea.js.LICENSE.txt  main.6b643df7.js
frontend/: .env  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: CommandPanel.js  DronePanel.js  EventLog.js  Header.js  PerformancePanel.js  SensorPanels.js  Sidebar.js  TelemetryCharts.js
frontend/src/hooks/: useApi.js
jt-zero/: CMakeLists.txt  COMMANDS.md  DEPLOYMENT.md  README.md  main.cpp
jt-zero/api/: python_bindings.cpp
jt-zero/camera/: camera_drivers.cpp  camera_pipeline.cpp
jt-zero/core/: event_engine.cpp  memory_engine.cpp  output_engine.cpp  reflex_engine.cpp  rule_engine.cpp  runtime.cpp
jt-zero/include/jt_zero/: camera.h  common.h  event_engine.h  mavlink_interface.h  memory_engine.h  output_engine.h  reflex_engine.h  rule_engine.h  runtime.h  sensors.h
jt-zero/mavlink/: mavlink_interface.cpp
jt-zero/sensors/: sensors.cpp
memory/: CHANGELOG.md  PRD.md
test_reports/: iteration_1.json  iteration_3.json
